# swarm_drones

./: CMakeLists.txt  package.xml
bash/: enableNetworkManager.sh  enableNetworkManagerHotspot.sh
launch/: swarm.launch  swarm_global.launch
msg/: Array.msg  Telemetry.msg
src/: 1STRscript.sh  2STRscript.sh  3STRscript.sh  camera_control_node.py  com_n copy.py  communication_node.py  connect_to_wifi.py  main_node copy.py  main_node.py  repeater_node.py  samopal.py  test_node.py  voting_node.py
srv/: PointCloud.srv  Repeater.srv  TakeScreen.srv  Voti.srv  Voting.srv
